[Qt] QNX build fails when building against Qt without clipboard support https://bugs.webkit.org/show_bug.cgi?id=98040

Patch by Milian Wolff <milian.wolff@kdab.com> on 2012-10-21
Reviewed by Simon Hausmann.

Gracefully handle QT_NO_CLIPBOARD and do not try to access qApp->clipboard()
in such cases. Instead, return false to indicate global selection is unsupported.

* WebProcess/WebCoreSupport/WebEditorClient.cpp:
(WebKit::WebEditorClient::supportsGlobalSelection):

Canonical link: https://commits.webkit.org/117967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132032 268f45cc-cd09-0410-ab3c-d52691b4dbfc